# Software3-Lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Code of Conduct  Dockerfile  Makefile  Metrics.Md  README.md  docker-compose.yml  file structure  requirements.txt
.github/workflows/: ci.yml
cpp/: vector_math.cpp
docs/: api_reference.md  architecture.md  metrics.md
github/workflows/: metrics-export.yml
infra/ansible/: deploy.yml
infra/helm/software3-lab/: Chart.yaml  values.yaml
infra/helm/software3-lab/templates/: service.yaml
infra/otel/: otel-collector-config.yaml
infra/terraform/: main.tf
pipelines/: collect_feedback.py  evaluate.py  fine_tune.py
rust/tokenizer/: Cargo.toml
rust/tokenizer/src/: lib.rs
scripts/: update_metrics_table.py
src/: llm_agent.py
src/core/: base_model.py  object_registry.py  utils.py
src/oop_labs/: __init__.py  airplane.py  jet_plane.py  motor_vehicle.py  motorcycle.py  pet.py  team.py  transport_mode.py  vending_machine.py
src/oop_labs/examples/: demo_registry.py  demo_vehicle_sim.py
src/src/: api.py  llm_agent.py
templates/: deployment.yaml
test/: test_agent.py
tools/: ml_tools.py
